--- a/Beeter/app/src/main/AndroidManifest.xml
+++ b/Beeter/app/src/main/AndroidManifest.xml
@@ -28,6 +28,8 @@
             android:label="@string/title_activity_stings_list"
             android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+        <activity android:name=".StingDetailActivity" >
+        </activity>
     </application>
 
 </manifest>
